# grunt

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICE  README.md  ROADMAP.md  SETUP.md  setup.bat
.github/workflows/: ci.yml  release.yml
data/: characters.json  efforts.json  sample.dict  voice_models.json
docs/: piper_bootstrap_plan.md
examples/: barks.csv  cop_barks.csv  delco_barks.csv  delco_gangster_barks.csv  jersey_barks.csv  russian_barks.csv  starter_barks.csv
include/: AudioOut.h  BankGen.h  Character.h  Engine.h  Generator.h  Json.h  Prosody.h  ResourcePath.h  ShipGate.h  Stages.h  Types.h  Vocalization.h  Wav.h
scripts/: package.sh  sample_lines.csv
src/: AudioOut.cpp  AudioRenderer.cpp  BankGen.cpp  Character.cpp  Engine.cpp  Generator.cpp  Json.cpp  PhonemeMapper.cpp  Prosody.cpp  ProsodyPlanner.cpp  ResourcePath.cpp  RetroFxChain.cpp  ShipGate.cpp  SyllablePlanner.cpp  TextNormalizer.cpp  Types.cpp  UnitDatabase.cpp  UnitSelector.cpp  Vocalization.cpp  Wav.cpp  gui_main.cpp  main.cpp
tests/: test_main.cpp
voices/heavy_brother/: voice.json
voices/heavy_brother/metadata/: units.json
